matrix/mas/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mas
  namespace: matrix
spec:
  type: ClusterIP
  selector:
    app: mas
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: internal
      port: 8081
      targetPort: internal
