matrix/mas/03-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mas-matrix-proxy-ing
  namespace: matrix
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`matrix.polarys.im`) && (PathPrefix(`/_matrix/client/v3/login`) || PathPrefix(`/_matrix/client/v3/logout`) || PathPrefix(`/_matrix/client/v3/refresh`))
      kind: Rule
      priority: 100
      services:
        - name: mas
          port: 80

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mas
  namespace: matrix
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.polarys.im`)
      kind: Rule
      services:
        - name: mas
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mas-adminapi
  namespace: matrix
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.polarys.im`) && PathPrefix(`/_mas/admin`)
      kind: Rule
      priority: 120
      services:
        - name: mas
          port: 80
